--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,10 +14,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+body {
+  font: 14px Helvetica, Arial, sans-serif;
+}
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
