--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Cairo,  Changa,'Tajawal', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -12,13 +12,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   /* font: 14px Cairo, Tajawal, Changa !important; */
 }
 
 body {
-  font: 14px Helvetica, Arial, sans-serif;
+ font: 14px  Cairo,  Changa,'Tajawal', sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
